feat: Email service added to future reset password method

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,14 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.39.0</version>
 		</dependency>
+
+		<!-- EMAIL -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>4.0.0-M2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
