--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,11 @@ cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 # File max size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# MailTrap Config
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=${MAILTRAP_USERNAME}
+spring.mail.password=${MAILTRAP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
