feat: Added cookies for a better user experience

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,9 @@ spring.main.allow-bean-definition-overriding=true
 jwt.secret=${JWT_SECRET}
 
 # JWT_EXPIRATION: The token's lifespan in seconds.
-jwt.expiration=${JWT_EXPIRATION}
+# JWT_EXPIRATION_REFRESH: The refresh token (cookies) lifespan in days (30).
+jwt.accessToken.expiration=${JWT_EXPIRATION}
+jwt.refreshToken.expiration=${JWT_EXPIRATION_REFRESH}
 
 # Cloudinary Configuration
 # CLOUDINARY_CLOUD_NAME: Your Cloudinary account name.
