--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
 			<version>3.1.0</version>
 		</dependency>
 
+		<!-- GOOGLE -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
+			<version>7.0.0-M2</version>
+		</dependency>
+
 		<!-- CLOUDINARY -->
 		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
 		<dependency>
