--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,7 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 oauth2.redirect.url=${OAUTH2_REDIRECT_URL}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+
+logging.level.org.springframework.security=DEBUG
+
