--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,10 +41,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # MailTrap Config
-spring.mail.host=sandbox.smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=${MAILTRAP_USERNAME}
-spring.mail.password=${MAILTRAP_PASSWORD}
+spring.mail.host=smtp.ethereal.email
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
