feat: Added OAuth2 with Facebook

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,8 +52,17 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
-oauth2.redirect.url=${OAUTH2_REDIRECT_URL}
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+
+# Facebook config
+spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_CLIENT_ID}
+spring.security.oauth2.client.registration.facebook.client-secret=${FACEBOOK_CLIENT_SECRET}
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+spring.security.oauth2.client.registration.facebook.redirect-uri=http://localhost:8080/login/oauth2/code/facebook
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture.type(large)
+spring.security.oauth2.client.provider.facebook.user-name-attribute=id
+
+oauth2.redirect.url=${OAUTH2_REDIRECT_URL}
 
 logging.level.org.springframework.security=DEBUG
 
